<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_home">Open Homepage (WebView)</string>
    <string name="action_kml_clean">Clean KML files</string>
    <string name="action_kml_cleaned">KML files have been deleted.</string>
    <string name="action_kml_deleted">KML file has been deleted.</string>
    <string name="action_kml_export">Export KML files</string>
    <string name="action_kml_export_date">Export KML files of target date</string>
    <string name="action_kml_export_empty">No KML data saved.</string>
    <string name="action_kml_exporting">Exporting...</string>
    <string name="action_kml_list">List KML file</string>
    <string name="action_kml_list_empty">No KML data saved.</string>
    <string name="action_kml">KML file</string>
    <string name="action_settings">Settings</string>
    <string name="action_twitter_api">Twitter API</string>
    <string name="action_twitter_profile_image">Reload my icon</string>
    <string name="all_zero">!!!</string>
    <string name="all_zero_altimeter">!!!!\nm</string>
    <string name="all_zero_pressure">!!!!\nhPa</string>
    <string name="all_zero_temp">!!.!\n°C</string>
    <string name="altimeter_m">!\nm</string>
    <string name="app">App</string>
    <string name="app_name">Otowa</string>
    <string name="app_summary">App settings</string>
    <string name="auth">Auth</string>
    <string name="auth_access_key">Access key</string>
    <string name="auth_access_key_default">Default access key</string>
    <string name="auth_access_secret">Access secret</string>
    <string name="auth_access_secret_default">Default access secret</string>
    <string name="auth_consumer_key">Consumer key</string>
    <string name="auth_consumer_key_default">Default consumer key</string>
    <string name="auth_consumer_secret">Consumer secret</string>
    <string name="auth_consumer_secret_default">Default consumer secret</string>
    <string name="auth_summary">Information required for authentication</string>
    <string name="button_tweet_location">Tweet location</string>
    <string name="bypass_twitter">Bypass Twitter</string>
    <string name="bypass_twitter_webview">Use WebView to open Twitter</string>
    <string name="clean_all_kmls">Remove all KML files</string>
    <string name="clear">Clear</string>
    <string name="clock_8888">88:88</string>
    <string name="compass_symbol">↑</string>
    <string name="compass_symbol_empty" />
    <string name="current_latitude">Latitude</string>
    <string name="current_longitude">Longitude</string>
    <string name="current_time">⌚</string>
    <string name="delete_tweet">Delete</string>
    <string name="deleted">Deleted.</string>
    <string name="duplicated_tweet_text">duplicate text</string>
    <string name="explicit_intents_twitter">Explicit intents</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="have_to_long_press_logging_button">Tap and hold to enable or disable logging.</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="home_area">Home area</string>
    <string name="home_area_latitude">Latitude of center point</string>
    <string name="home_area_longitude">Longitude of center point</string>
    <string name="home_area_radius">Radius of Home area (unit: m)</string>
    <string name="home_area_summary">You should decide on the location of not being located.</string>
    <string name="icon">icon</string>
    <string name="is_debug_mode">Debug mode</string>
    <string name="is_debug_mode_loop">Debug mode (Loop)</string>
    <string name="km_h">km/h</string>
    <string name="kml_clean_dialog">Clean KMLs</string>
    <string name="kml_clean_message">Select a target KML file or tap Remove-all button.</string>
    <string name="kml_list_dialog">List KMLs</string>
    <string name="locate">Locate</string>
    <string name="locate_unknown">UnLocated</string>
    <string name="locating">Locating</string>
    <string name="locating_interval_meters">Interval (unit: m)</string>
    <string name="locating_interval_meters_default">5</string>
    <string name="locating_interval_meters_summary">Minimum displacement between location updates.</string>
    <string name="locating_interval_milliseconds">Interval (unit: ms)</string>
    <string name="locating_interval_milliseconds_default">10000</string>
    <string name="locating_interval_milliseconds_summary">Interval for active location updates.</string>
    <string name="locating_error">error</string>
    <string name="locating_error_default">0.001</string>
    <string name="locating_error_summary">Adding errors to locating results (unit: deg)</string>
    <string name="locating_summary" />
    <string name="logger">Logger</string>
    <string name="logging_enabled">Logging is enabled</string>
    <string name="logging_start">Start logging</string>
    <string name="logging_stop">Stop logging</string>
    <string name="login">Login</string>
    <string name="network_state_available"> available.</string>
    <string name="network_state_no_networks">no networks.</string>
    <string name="next">Next</string>
    <string name="not_logged_in">Please log in to the Twitter.</string>
    <string name="notification_description_logger">Logger status notification</string>
    <string name="prefix">Prefix</string>
    <string name="pressure_hpa">\nhPa</string>
    <string name="previous">Previous</string>
    <string name="profile_image_url_https">Icon URL</string>
    <string name="profile_image_url_https_default">Default icon url</string>
    <string name="reloaded">Reloaded.</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="suffix">Suffix</string>
    <string name="sunrise_symbol">🌅</string>
    <string name="sunset_symbol">🌇</string>
    <string name="temp_c">\n°C</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="tweet">Tweet</string>
    <string name="tweet_delete_dialog">Delete my tweet</string>
    <string name="tweet_from_notification"> -- Tweet your current location -- </string>
    <string name="tweet_from_remote"> -- Tweet something -- </string>
    <string name="tweeted">Tweeted: </string>
    <string name="weather">Weather</string>
    <string name="weather_forecast">⛅</string>
    <string name="weather_forecast_base_url">Base URL</string>
    <string name="weather_forecast_base_url_default">https://weather.tsukumijima.net/api/forecast/city/</string>
    <string name="weather_forecast_base_url_default_ld">http://weather.livedoor.com/forecast/webservice/json/v1/</string>
    <string name="weather_forecast_empty" />
    <string name="weather_summary" />
    <string name="webview">WebView</string>
    <string name="webview_bottom_url_default">https://maps.gsi.go.jp/</string>
    <string name="webview_bottom_url">URL</string>
</resources><!-- Copyright (c) 2021 YA-androidapp(https://github.com/YA-androidapp) All rights reserved. -->