<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="jp.gr.java_conf.ya.otowa.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item android:title="@string/action_kml">
        <menu>
            <item
                android:id="@+id/action_kml_list"
                android:orderInCategory="100"
                android:title="@string/action_kml_list"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_kml_export"
                android:orderInCategory="100"
                android:title="@string/action_kml_export"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_kml_clean"
                android:orderInCategory="100"
                android:title="@string/action_kml_clean"
                app:showAsAction="never" />
        </menu>
    </item>
    <item android:title="@string/action_twitter_api">
        <menu>
            <item
                android:id="@+id/action_twitter_profile_image"
                android:orderInCategory="100"
                android:title="@string/action_twitter_profile_image"
                app:showAsAction="never" />
        </menu>
    </item>
</menu><!-- Copyright (c) 2021 YA-androidapp(https://github.com/YA-androidapp) All rights reserved. -->