<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FirstFragment">

    <LinearLayout
        android:id="@+id/linear_layout_tweet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_clear"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:enabled="false"
                android:text="@string/clear" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/tweet_prefix"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="start|top"
                    android:hint="@string/prefix"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:lines="1" />

                <EditText
                    android:id="@+id/tweet_suffix"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:gravity="start|top"
                    android:hint="@string/suffix"
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine"
                    android:lines="1" />

            </LinearLayout>

            <ImageButton
                android:background="@mipmap/ic_launcher"
                android:id="@+id/icon_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:contentDescription="@string/icon"
                android:scaleType="fitCenter" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_locate"
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:enabled="false"
                android:text="@string/locate_unknown"
                android:textSize="8sp"
                tools:ignore="SmallSp" />

            <EditText
                android:id="@+id/tweet_main"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|top"
                android:hint="@string/tweet"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="5" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_tweet_location"
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:enabled="false"
                android:text="@string/button_tweet_location"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_logging"
                android:layout_marginLeft="8dp"
                android:layout_width="192dp"
                android:layout_height="match_parent"
                android:text="@string/logging_start"
                android:textSize="12sp"
                app:backgroundTint="#0066ff"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textview_speed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="200dp"
                android:autoSizeMinTextSize="12dp"
                android:autoSizePresetSizes="72dp"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/dseg14modern_regular"
                android:gravity="center_horizontal|center_vertical"
                android:padding="50dp"
                android:text="@string/all_zero"
                app:fontFamily="@font/dseg14modern_regular" />

            <TextView
                android:id="@+id/textview_speed_label"
                android:layout_width="72dp"
                android:layout_height="match_parent"
                android:fontFamily="@font/dseg14modern_regular"
                android:gravity="bottom"
                android:paddingEnd="6dp"
                android:paddingBottom="72dp"
                android:text="@string/km_h"
                app:fontFamily="@font/dseg14modern_regular" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="96dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_compass_direction"
                    android:layout_width="match_parent"
                    android:layout_height="32dp"
                    android:layout_weight="1"
                    android:autoSizeMaxTextSize="64dp"
                    android:autoSizeMinTextSize="12dp"
                    android:autoSizePresetSizes="12dp"
                    android:autoSizeTextType="uniform"
                    android:fontFamily="@font/dseg14modern_regular"
                    android:gravity="center_horizontal|center_vertical"
                    android:text=""
                    app:fontFamily="@font/dseg14modern_regular" />

                <TextView
                    android:id="@+id/textview_compass"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_margin="16dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:padding="8dp"
                    android:text="@string/compass_symbol_empty"
                    android:textSize="32sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textview_pressure"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autoSizeMaxTextSize="18dp"
                        android:autoSizeMinTextSize="8dp"
                        android:autoSizePresetSizes="8dp"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="@font/dseg14modern_regular"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="5dp"
                        android:text="@string/all_zero_pressure"
                        app:fontFamily="@font/dseg14modern_regular" />

                    <TextView
                        android:id="@+id/textview_ambient_temperature"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autoSizeMaxTextSize="18dp"
                        android:autoSizeMinTextSize="8dp"
                        android:autoSizePresetSizes="8dp"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="@font/dseg14modern_regular"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="5dp"
                        android:text="@string/all_zero_temp"
                        app:fontFamily="@font/dseg14modern_regular" />

                    <TextView
                        android:id="@+id/textview_altimeter"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:autoSizeMaxTextSize="18dp"
                        android:autoSizeMinTextSize="8dp"
                        android:autoSizePresetSizes="8dp"
                        android:autoSizeTextType="uniform"
                        android:fontFamily="@font/dseg14modern_regular"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="5dp"
                        android:text="@string/all_zero_altimeter"
                        app:fontFamily="@font/dseg14modern_regular" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textview_network_state"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:fontFamily="@font/dseg14modern_regular"
                    android:gravity="center_horizontal|center_vertical"
                    android:padding="5dp"
                    android:text="@string/network_state_no_networks"
                    app:fontFamily="@font/dseg14modern_regular" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="6dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image_weather"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_weight="1"
                        android:background="#ffffffff"
                        android:contentDescription="@string/weather_forecast"
                        android:scaleType="fitCenter"
                        />

                    <TextView
                        android:id="@+id/textview_weather"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="1dp"
                        android:autoSizeMaxTextSize="32dp"
                        android:autoSizeMinTextSize="4dp"
                        android:autoSizePresetSizes="4dp"
                        android:autoSizeTextType="uniform"
                        android:text="@string/weather_forecast_empty" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/current_time" />

                    <TextView
                        android:id="@+id/textview_clock"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/dseg14modern_regular"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="2dp"
                        android:text="@string/clock_8888"
                        app:fontFamily="@font/dseg14modern_regular" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunrise_symbol" />

                    <TextView
                        android:id="@+id/textview_sunrise"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/dseg14modern_regular"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="2dp"
                        android:text="@string/clock_8888"
                        app:fontFamily="@font/dseg14modern_regular" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sunset_symbol" />

                    <TextView
                        android:id="@+id/textview_sunset"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:fontFamily="@font/dseg14modern_regular"
                        android:gravity="center_horizontal|center_vertical"
                        android:padding="2dp"
                        android:text="@string/clock_8888"
                        app:fontFamily="@font/dseg14modern_regular" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout><!-- Copyright (c) 2023 YA-androidapp(https://github.com/YA-androidapp) All rights reserved. -->